--- a/demo/demo.css
+++ b/demo/demo.css
@@ -3,10 +3,9 @@ html, body {
   font-size: 1rem; }
 
 pre {
-  margin: 0; }
+  margin: 0 0 0.8rem 0; }
 
 code {
-  display: block;
   white-space: pre-wrap;
   text-align: left;
   font-size: 0.75rem; }
@@ -18,19 +17,35 @@ body {
   color: #272343; }
 
 h1, h2, h3, h4, h5 {
-  margin: 0 0 0.625rem 0; }
+  margin: 0 0 0.8rem 0; }
 
 p {
-  margin: 0 0 1.25rem 0; }
+  margin: 0 0 0.8rem 0; }
 
 hr {
   margin: 1.25rem 0;
-  border-color: #272343; }
+  border-color: #bae8e8; }
+
+input {
+  width: 100%;
+  margin-bottom: 0.8rem;
+  box-sizing: border-box; }
+
+label {
+  display: block;
+  text-align: left;
+  font-weight: bold;
+  font-size: 0.75rem; }
+
+a {
+  color: #272343; }
+  a:visited {
+    color: #272343; }
 
 .button {
   display: inline-block;
   border: none;
-  padding: 0.625rem 0.9375rem;
+  padding: 0.8rem 1.2rem;
   margin: 0 0 1.25rem 0;
   text-decoration: none;
   background: #bae8e8;
@@ -51,7 +66,7 @@ hr {
     margin: 0; }
   .button--text {
     background: transparent;
-    padding: 0.3125rem 0.625rem; }
+    padding: 0.3125rem 0.8rem; }
     .button--text:hover, .button--text:focus, .button--text:active {
       background: transparent;
       outline: none; }
@@ -60,10 +75,12 @@ hr {
 
 .content {
   max-width: 50rem;
-  padding: 1.875rem 0.625rem;
+  padding: 1.875rem 0.8rem;
   margin: auto;
   background: #ffffff; }
   .content__highlight {
-    padding: 0.625rem;
+    padding: 0.8rem;
     background: #e3f6f5;
-    text-align: center; }
+    text-align: center;
+    outline: 1px solid #ffffff;
+    outline-offset: -0.3125rem; }
