Aria hidden attribute for fallbacking, added minor animation

--- a/styles/docs.scss
+++ b/styles/docs.scss
@@ -136,8 +136,8 @@ a {
 
   &__github-link {
     position: absolute;
-    top: $padding;
-    right: $padding;
+    top: $padding-xlarge;
+    right: $padding-xlarge;
   }
 }
 
